When halting the child results in an EOF, don't print the exception
since that may be confused with a failure.

Run vmstat -s at the end of the ATF tests to help diagnose issues
like excessive paging due to insufficient memory.

Increase the default of the --test-timeout option from 3 hours to 8
hours, since the sparc tests are now taking more than 5 hours.

Increase the default disk size to 1526M, as 1G is no longer enough
for amd64.

Pass format=raw in the qemu -drive option to suppress warnings in
recent qemu versions.

- 1.39 released -

Deal with incompatible change in the output format of the "info block"
command in qemu 2.5.0.
 
Fix bug where the exit status of the shell command specified with the
--run option was not propagated to the exit status of anita.

New public method start_boot, to facilitate writing test cases that
interact with the boot prompt.

The structured log file now also contains informational messages,
of the form info('message').

- 1.38 released -

Deal with the sysinst message changes of 2015-04-30.

When halting the VM, don't quit as soon as the text "halted" is seen,
because it may be part the message "halted by root", which is printed
before disks have been synced.  Instead look for "The operating system
has halted", EOF, or a timeout.

- 1.37 released -

The global test() function is no longer supported, use the run_tests()
method of the Anita object instead.

When halting the VM, do not attempt to log in if already logged in.

Make the distinctive shell prompts different from one invocation of
anita to another, so that anita can run itself recursively on the VM
without the outer instance mistaking a shell prompt from an inner
instance for one of its own.

- 1.36 released -

When running a shell command, wrap the exit status in distictive text
so that it can be reliably matched in the presence of buffered output
containing other numeric strings.

Halt the VM when done.

Print the qemu command.

- 1.35 released -
