@@ -1,3 +1,7 @@
+Work around a bug in the urllib library of Python 2.7.12 that causes
+FTP transfers to fail with the error message "[Errno ftp error] 200
+Type set to I"; see https://bugs.python.org/issue27973.
+
 When halting the child results in an EOF, don't print the exception
 since that may be confused with a failure.
 
